--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -23,9 +23,9 @@ jobs:
       uses: actions/checkout@v2
       with:
         fetch-depth: 0
-
-    - name: Set up Snyk client
-      run: wget https://github.com/snyk/snyk/releases/download/v1.530.0/snyk-linux; mv ./snyk-linux ./snyk; chmod +x ./snyk;
+     
+#    - name: Set up Snyk client
+#      run: wget https://github.com/snyk/snyk/releases/download/v1.530.0/snyk-linux; mv ./snyk-linux ./snyk; chmod +x ./snyk;
 
     - name: Set up Terraform client
       run: wget https://releases.hashicorp.com/terraform/1.0.8/terraform_1.0.8_linux_amd64.zip; unzip terraform_1.0.8_linux_amd64.zip; mv terraform ./iac; chmod +x ./iac/terraform; rm terraform_1.0.8_linux_amd64.zip;
@@ -41,16 +41,23 @@ jobs:
     - name: Compile, Build and Test
       run: ./build.sh
 
-    - name: Code Analysis - SAST (White-box testing)
+    - name: Code Analysis - SAST (White-box testing) - Run SonarCloud to check for vulnerabilities 
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       run: ./gradlew jacocoTestReport  sonarqube --stacktrace -i
 
-    - name: Libraries Analysis - SAST (White-box testing)
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      run: ./librariesAnalysis.sh
+    - name: Libraries Analysis - SAST (White-box testing) - Run Snyk to check for vulnerabilities
+        uses: snyk/actions/gradle-jdk11@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high
+
+    # - name: Libraries Analysis - SAST (White-box testing) - Snyk
+    #   env:
+    #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+    #   run: ./librariesAnalysis.sh
       
     - name: Packaging
       run: ./package.sh
